Added weather data

--- a/assignment_1/flickbike_data_exploration.ipynb
+++ b/assignment_1/flickbike_data_exploration.ipynb
@@ -338,7 +338,7 @@
    ],
    "source": [
     "# Read File\n",
-    "df_weather = pd.read_csv('../data/KNMI_20191231.txt', sep=\",\", header=None)\n",
+    "df_weather = pd.read_csv('KNMI_20191231.txt', sep=\",\", header=None)\n",
     "df_weather.columns = ['location_id','date','temp_max','rain_sum']\n",
     "\n",
     "df_weather[\"date\"] = pd.to_datetime(df[\"date\"], format=\"%Y-%m-%d\")\n",
