--- a/assignment_1/flickbike_data_exploration.ipynb
+++ b/assignment_1/flickbike_data_exploration.ipynb
@@ -1,6 +1,58 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Het plan\n",
+    "\n",
+    "Hoe bereken je de groei van FlickBike? In het bijzonder: hoe voorspel je het aantal verhuurde fietsen op de dagen tussen 10 december 2019 en 31 januari 2020? \n",
+    "\n",
+    "### 1 Hoe bereken je  de groei van FlickBike? In het bijzonder: hoe voorspel je het aantal verhuurde fietsen op de dagen tussen 10 december 2019 en 31 januari 2020? \n",
+    "Eerst zal ik kijken wat de seizoen effecten zijn\n",
+    "\n",
+    "Ik zal kijken of de groei te normaliseren is.\n",
+    "\n",
+    "Als eerste poging zal ik hiervoor eerst de dagen nemen met het zelfde soort weer. Dus bijvoorbeeld alle dagen waar de temperatuur tussen 15 en 25 graden licht en waar het niet heeft geregend. Hieruit kan ik een groei formule opstellen. \n",
+    "\n",
+    "Hierna maak ik een tweede model dat de afwijking voorspelt van het voorspelde gebruik op een bepaalde dag. Mijn model zou dan voor een normalen situatie voorspellen hoeveel gebruik er zal zijn op bijvoorbeeld 30 januari 2020. Daar komt dan een waarden uit zoals 400 verhuren op een dag. Mijn tweede model kijkt dan naar de factoren van een dag en bepaald welk effect dit heeft op het aantal. Dus bijvoorbeeld het regent dus gebruik neemt met 80% af en geeft dan terug 400 * 0.2 = 80 verhuringen \n",
+    "\n",
+    "### Welke invloeden verwacht je van, en op welke manier kun je je model gevoelig maken voor: \n",
+    "##### Het weer. \n",
+    "Op zonnige dagen en dagen waar het niet regent zullen er meer mensen met de fiets gaan  \n",
+    "##### De dag van de week.  \n",
+    "Aangezien de bikes voornamelijk voor woon werk verkeer worden gebruikt zal in het weekend en op feestdagen het gebruik dalen.\n",
+    "Bijzondere dagen in het jaar, zoals feestdagen, schoolvakanties, etc. \n",
+    "Zie 2\n",
+    "Eventueel andere factoren. \n",
+    "Vakantie seizoen. Aangezien het op een vliegveld wordt gebruikt is er een kans dat er tijdens de vakanties meer arbeid nodig is en de fietsen meer gebruikt kunnen worden. Misschien is dat nog geen groot genoegen factor nu maar dat is wel iets dat je kan gaan merken als het bedrijf is gegroeid.\n",
+    "Net na nieuwjaar. Net na nieuwjaar hebben mensen goede voornemens en willen ze misschien vaker gaan fietsen. Dit kan een stijging veroorzaken.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 2 Hoe kan, op basis van data, worden voorspeld waar er tekorten van fietsen dreigen te ontstaan en hoe de fietsen het beste zo kunnen worden verplaatst dat ze zowel over het hele terrein van Schiphol-Oost beschikbaar zijn en tegelijkertijd vooral beschikbaar zijn op plaatsen waar het regelmatig druk is? \n",
+    "Ik zal de dag opdelen in een aantal periode. Ochtend, Middag, Avond, Nacht.\n",
+    "Ochtend = 5:00 tot 12:00\n",
+    "Middag  = 12:00 tot 15:00\n",
+    "Avond    = 15:00 tot 21:00\n",
+    "Nacht    = 21:00 tot 5:00\n",
+    "\n",
+    "Deze tijden zijn niet definitief maar zullen op experimentelen wijzen worden verfijnd.\n",
+    "Voor elke periode zal op elke dag een cluster worden gemaakt. Dan zullen de verschillende periode van de verschillende dagen (dus ochtend dag 1 met ochtend dag 2) worden vergeleken en hier nieuwe clusters van worden gemaakt. Het uiteindelijke resultaat is x locaties voor elke periode van een dag waar de fietsen naartoe kunnen worden gebracht.\n",
+    "\n",
+    "\n",
+    "### 3 Hoe kun je berekenen met hoeveel fietsen zou FlickBike minimaal kunnen werken, zodanig dat te verwachten pieken op te vangen zijn?\n",
+    "Met hoeveel fietsen zou FlickBike minimaal kunnen werken, zodanig dat te verwachten pieken op te vangen zijn?\n",
+    "Ik zal opzoeken wanneer de pieken zijn. Ik zal kijken hoeveel fietsen er dan worden gebruikt. Ik zal voor deze momenten een groei formule bereken zoals ik bij 1 heb gedaan. Hiermee kan ik een schatting maken wanneer er hoeveel fietsen nodig zijn\n",
+    "\n",
+    "### 4 Visualisatie :\n",
+    "4\tVoor 1 zou ik een lijn grafiek maken\n",
+    "5\tVoor 2 zal ik de punten op een kaart laten zien voor elke periode\n",
+    "6\tVoor 3 kan een gebruiker een dag opvragen en krijgt dan een bar chart te zien met de beschikbare fietsen en de vragen die ik voorspel\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,152 +74,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>tripid</th>\n",
-       "      <th>userid</th>\n",
-       "      <th>bikeid</th>\n",
-       "      <th>account</th>\n",
-       "      <th>bikenumber</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>end_time</th>\n",
-       "      <th>start_lat</th>\n",
-       "      <th>start_lng</th>\n",
-       "      <th>end_lat</th>\n",
-       "      <th>end_lng</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33838</td>\n",
-       "      <td>13452</td>\n",
-       "      <td>382</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>6631000433</td>\n",
-       "      <td>2019-01-01 06:46:03</td>\n",
-       "      <td>2019-01-01 06:46:03</td>\n",
-       "      <td>52.296065</td>\n",
-       "      <td>4.787667</td>\n",
-       "      <td>52.296200</td>\n",
-       "      <td>4.787679</td>\n",
-       "      <td>2019-01-01 06:46:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>33839</td>\n",
-       "      <td>13452</td>\n",
-       "      <td>812</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>6631000146</td>\n",
-       "      <td>2019-01-01 06:47:39</td>\n",
-       "      <td>2019-01-01 06:47:39</td>\n",
-       "      <td>52.295938</td>\n",
-       "      <td>4.788336</td>\n",
-       "      <td>52.295940</td>\n",
-       "      <td>4.788557</td>\n",
-       "      <td>2019-01-01 06:47:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>33851</td>\n",
-       "      <td>13182</td>\n",
-       "      <td>238</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>6631000443</td>\n",
-       "      <td>2019-01-01 14:15:36</td>\n",
-       "      <td>2019-01-01 14:15:36</td>\n",
-       "      <td>52.307337</td>\n",
-       "      <td>4.807633</td>\n",
-       "      <td>52.307336</td>\n",
-       "      <td>4.807630</td>\n",
-       "      <td>2019-01-01 14:15:32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>33852</td>\n",
-       "      <td>13182</td>\n",
-       "      <td>238</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>6631000443</td>\n",
-       "      <td>2019-01-01 14:33:50</td>\n",
-       "      <td>2019-01-01 14:33:50</td>\n",
-       "      <td>52.308478</td>\n",
-       "      <td>4.809970</td>\n",
-       "      <td>52.308537</td>\n",
-       "      <td>4.810099</td>\n",
-       "      <td>2019-01-01 14:33:46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>33867</td>\n",
-       "      <td>12674</td>\n",
-       "      <td>787</td>\n",
-       "      <td>AG</td>\n",
-       "      <td>6631000283</td>\n",
-       "      <td>2019-01-01 20:11:05</td>\n",
-       "      <td>2019-01-01 20:11:05</td>\n",
-       "      <td>52.506522</td>\n",
-       "      <td>4.727323</td>\n",
-       "      <td>52.506809</td>\n",
-       "      <td>4.732135</td>\n",
-       "      <td>2019-01-01 20:11:01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  tripid  userid  bikeid account  bikenumber  \\\n",
-       "0           1   33838   13452     382      AR  6631000433   \n",
-       "1           2   33839   13452     812      AR  6631000146   \n",
-       "2           3   33851   13182     238      AR  6631000443   \n",
-       "3           4   33852   13182     238      AR  6631000443   \n",
-       "4           5   33867   12674     787      AG  6631000283   \n",
-       "\n",
-       "            start_time             end_time  start_lat  start_lng    end_lat  \\\n",
-       "0  2019-01-01 06:46:03  2019-01-01 06:46:03  52.296065   4.787667  52.296200   \n",
-       "1  2019-01-01 06:47:39  2019-01-01 06:47:39  52.295938   4.788336  52.295940   \n",
-       "2  2019-01-01 14:15:36  2019-01-01 14:15:36  52.307337   4.807633  52.307336   \n",
-       "3  2019-01-01 14:33:50  2019-01-01 14:33:50  52.308478   4.809970  52.308537   \n",
-       "4  2019-01-01 20:11:05  2019-01-01 20:11:05  52.506522   4.727323  52.506809   \n",
-       "\n",
-       "    end_lng                date  \n",
-       "0  4.787679 2019-01-01 06:46:00  \n",
-       "1  4.788557 2019-01-01 06:47:35  \n",
-       "2  4.807630 2019-01-01 14:15:32  \n",
-       "3  4.810099 2019-01-01 14:33:46  \n",
-       "4  4.732135 2019-01-01 20:11:01  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] File b'../data/bikes.csv' does not exist: b'../data/bikes.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-ce06137eafe3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/bikes.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    683\u001b[0m         )\n\u001b[0;32m    684\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 685\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    686\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    687\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    455\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 457\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    458\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    893\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    894\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 895\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    896\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    897\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1133\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"c\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1134\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"c\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1135\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1136\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1137\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   1915\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"usecols\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1916\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1917\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1918\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1919\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] File b'../data/bikes.csv' does not exist: b'../data/bikes.csv'"
+     ]
     }
    ],
    "source": [
@@ -372,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
