Added our names to the file

--- a/assignment_1/flickbike_data_exploration.ipynb
+++ b/assignment_1/flickbike_data_exploration.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "### Het plan\n",
     "\n",
+    "D\n",
+    "\n",
     "Hoe bereken je de groei van FlickBike? In het bijzonder: hoe voorspel je het aantal verhuurde fietsen op de dagen tussen 10 december 2019 en 31 januari 2020? \n",
     "\n",
     "### 1 Hoe bereken je  de groei van FlickBike? In het bijzonder: hoe voorspel je het aantal verhuurde fietsen op de dagen tussen 10 december 2019 en 31 januari 2020? \n",
@@ -651,7 +653,7 @@
    "source": [
     "## Indivuduelen gebruiker\n",
     "\n",
-    "Hier kijken we naar het gebruik van de fietsen door de gebruikers"
+    "Hier kijken we naar het gebruik van de fietsen door de gebruikers. Er wordt geken hoe vaak een gebruiker een fiets heeft gehuurd. "
    ]
   },
   {
