Wasn't saved added our names now

--- a/assignment_1/flickbike_data_exploration.ipynb
+++ b/assignment_1/flickbike_data_exploration.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "### Het plan\n",
     "\n",
-    "D\n",
+    "Door Roeland Oostdam en Lucas van Wijk.\n",
+    "\n",
     "\n",
     "Hoe bereken je de groei van FlickBike? In het bijzonder: hoe voorspel je het aantal verhuurde fietsen op de dagen tussen 10 december 2019 en 31 januari 2020? \n",
     "\n",
