--- a/assignment_1/extended_analysis.ipynb
+++ b/assignment_1/extended_analysis.ipynb
@@ -7,7 +7,7 @@
     "<h1>Flickbike Data-Analyse  <p style=\"color:gray;display:inline;font-size:14px;\">  Schiphol-Oost</p></h1>\n",
     "\n",
     "<hr style=\"height:2px;border-width:0;color:gray;background-color:gray\"> \n",
-    "<img src='img/schiphol.jpg' style=width:100%>\n",
+    "<img src='img/schiphol.jpg?raw=true' style=width:100%>\n",
     "<hr style=\"height:2px;border-width:0;color:gray;background-color:gray\"> \n",
     "\n",
     "## De volgende onderzoeksvragen worden in dit notebook behandeld:\n",
