--- a/assignment_1/extended_analysis.ipynb
+++ b/assignment_1/extended_analysis.ipynb
@@ -2780,28 +2780,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"min lat:\",df_coords.lat.min())\n",
-    "print(\"max lat:\",df_coords.lat.max())\n",
-    "print(\"min lng:\",df_coords.lng.min())\n",
-    "print(\"max lng:\",df_coords.lng.max())\n",
-    "# print('Area',schiphol_large_area)\n",
-    "\n",
-    "area = schiphol_east\n",
-    "\n",
-    "print(\"-\"*30)\n",
-    "print('Area',schiphol_east)\n",
-    "print(\"min lat:\",min_lat)\n",
-    "print(\"max lat:\",max_lat)\n",
-    "print(\"min lng:\",min_lng)\n",
-    "print(\"max lng:\",max_lng)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2817,6 +2795,7 @@
    "source": [
     "def heatmap(test_df, area, resolution, timeframe=None):\n",
     "    if timeframe != None:\n",
+    "        start_date, end_date = timeframe\n",
     "        mask = (test_df['timestamp'] > start_date) & (test_df['timestamp'] <= end_date)\n",
     "        tmp_df = test_df.loc[mask]\n",
     "        title = \"Heatmap \" + str(timeframe[0] + \" - \" + str(timeframe[1]))\n",
